# terraform-aws-api-auth-proxy

./: README.md  main.tf  pyproject.toml  variables.tf  versions.tf
modules/oauth2/: README.md  locals.tf  main.tf  outputs.tf  variables.tf
modules/oauth2/lambda/: Dockerfile  build.sh
modules/oauth2/lambda/authorizer/: function.py
modules/oauth2/lambda/callback/: function.py  requirements.txt
modules/oauth2/lambda/signin/: function.py  requirements.txt
modules/subdomain/: README.md  apigateway.tf  locals.tf  outputs.tf  route53.tf  variables.tf
